<?xml version="1.0" encoding="utf-8"?>
<!--
  ПОДРОБНЫЙ РАЗБОР РЕСУРСА constraint_layout.xml.
  XML описывает иерархию View. setContentView/inflate создаёт из неё реальные объекты.
  layout-land выбирается системой в альбомной ориентации; имя файла остаётся тем же.
  android - свойства runtime, app - AndroidX/Material, tools - только preview IDE.
  id связывает XML с Java/Binding; @string хранит текст, ?attr берёт значение из темы.
  padding - внутренний, margin - внешний отступ; dp - размеры, sp - размер текста.
  Элементы: ConstraintLayout @+id/main.
  Элементы: TextView @+id/constraintTitle.
  Элементы: Button @+id/constraintButtonLeft.
  Элементы: Button @+id/constraintButtonRight.
  Элементы: CheckBox @+id/constraintCheckBox.
-->

<!-- Каждый элемент привязан к родителю или соседнему элементу: это устраняет неоднозначность положения. -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/constraintTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_life"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/constraintButtonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_one"
        app:layout_constraintEnd_toStartOf="@id/constraintButtonRight"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintTitle" />

    <Button
        android:id="@+id/constraintButtonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_two"
        app:layout_constraintBottom_toBottomOf="@id/constraintButtonLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/constraintButtonLeft"
        app:layout_constraintTop_toTopOf="@id/constraintButtonLeft" />

    <CheckBox
        android:id="@+id/constraintCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/table_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintButtonLeft" />
</androidx.constraintlayout.widget.ConstraintLayout>
